Fix: replace html2canvas with DomToImage library to solve grainy image and wrong colour gradient

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 .donut {
-    width: 200px;
-    height: 200px;
+    width: 350px;
+    height: 350px;
     background-color: transparent;
     border-radius: 50%;
     position: relative;
@@ -27,10 +27,10 @@
     background-image: url("../images/placeholder-smiley-face.webp");
     transform: rotate(225deg);
     border-radius: 50%;
-    top: 35px;
-    left: 35px;
-    right: 35px;
-    bottom: 35px;
+    top: 65px;
+    left: 65px;
+    right: 65px;
+    bottom: 65px;
   }
 
   #download-btn {
